# legacy-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  LICENSES.md  PRINCIPLES.md  README.md  SECURITY.md  mcp-remote-live.ps1  pyproject.toml
.claude/: settings.json
.claude/commands/: release.md  session-close.md  session-open.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
client/: mcp-remote-live.ps1
collector/: Collect-ADData.ps1  README.txt
collector/modules/: Computers.psm1  DNS.psm1  DomainControllers.psm1  Domains.psm1  FGPP.psm1  FSP.psm1  Forest.psm1  GPO.psm1  Groups.psm1  OUs.psm1  PKI.psm1  Schema.psm1  Sites.psm1  Trusts.psm1  Users.psm1
config/: config.example-A.yaml  config.example-B.yaml  config.example-C.yaml
docs/: architecture.md  beyond-webster.md  code-signing-policy.md  deployment-profiles.md  getting-started-a.md  getting-started-b-core.md  getting-started.md  minimum-permissions.md  security-testing.md  tls-certificate-setup.md  tools-reference.md
installer/: Config-LegacyMCP.ps1  Install-LegacyMCP.ps1  Manage-Workspaces.ps1  README.txt  Remove-LegacyMCPPermissions.ps1  Set-LegacyMCPPermissions.ps1  Setup-LegacyMCP.ps1  Setup-LegacyMCPClient.ps1  Test-LegacyMCPPermissions.ps1  Uninstall-LegacyMCP.ps1  mcp-remote-live.ps1
installer/modules/: LegacyMCP.Certs.psm1  LegacyMCP.Client.psm1  LegacyMCP.Common.psm1  LegacyMCP.Config.psm1  LegacyMCP.Python.psm1  LegacyMCP.Service.psm1
scripts/: Register-EventLog.ps1
src/legacy_mcp/: __init__.py  auth.py  config.py  config_registry.py  oauth.py  server.py
tests/fixtures/: contoso-sample.json  (+1 more)
(+52 files in other folders)
