[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legacy-mcp"
version = "0.2.1"
description = "Active Directory MCP Server for AI-powered assessment"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.25.0,<2",
    "pyyaml>=6.0",
    "pywin32>=306; sys_platform == 'win32'",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Repository = "https://github.com/Marco-Lelli/legacy-mcp"

[project.scripts]
legacy-mcp = "legacy_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/legacy_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
